Increase permanent generation memory limit running Geronimo during integration tests.